# minimal-gn-project

./: .gn  BUILDCONFIG.gn  Readme.md  gn.md  hello_world.cc
toolchains/native-linux-gcc/: BUILD.gn
